[package]
authors = ["Without Boats <woboats@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "c3po"
repository = "https://github.com/withoutboats/c3po"
version = "0.1.0"

[dependencies]
futures = "0.1.13"
serde = "1.0.0"
serde_derive = "1.0.0"
tokio-core = "0.1.6"

[dependencies.tokio-service]
branch = "new-new-service"
git = "https://github.com/withoutboats/tokio-service"
